

  02 Jul 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.14.6.ebuild,
  -lh-sources-3.14.7.ebuild, -lh-sources-3.15.0.ebuild,
  -lh-sources-3.15.1.ebuild, -lh-sources-3.15.2.ebuild,
  +lh-sources-3.15.3.ebuild, -files/lh-sources-3.14-armv6.patch,
  -files/README.gentoo:
  Bump to latest aufs3, genpatches and linux release

  27 Jun 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.15.2.ebuild,
  +files/README.gentoo-r1:
  Bump to latest aufs3, genpatches and linux release

*lh-sources-3.15.2 (27 Jun 2014)

  27 Jun 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.15.2.ebuild,
  +files/README.gentoo-r1:
  Bump to latest aufs3, genpatches and linux release

  23 Jun 2014; Justin Lecher <jlec@gentoo.org> Manifest:
  Fix checksums

  20 Jun 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.1.ebuild:
  Add latest BFQ patch

*lh-sources-3.15.1 (19 Jun 2014)

  19 Jun 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.15.1.ebuild:
  Bump to latest aufs3, genpatches and linux release

  15 Jun 2014; Justin Lecher <jlec@gentoo.org> files/README.gentoo:
  Fix README file

  15 Jun 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.0.ebuild,
  -files/lh-sources-3.9-armv6.patch, -files/lh-sources-3.10-armv6.patch,
  -files/lh-sources-3.11-armv6.patch,
  -files/lh-sources-3.12.7-mmap-aufs3.patch,
  -files/lh-sources-3.12-armv6.patch, -files/lh-sources-3.13-armv6.patch,
  +files/lh-sources-3.15-armv6.patch, -files/a.patch:
  Fix missing patch and drop old

  15 Jun 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.0.ebuild:
  Bump to latest aufs3, genpatches and linux release

  14 Jun 2014; Justin Lecher <jlec@gentoo.org> ChangeLog:
  Fix renamed patch name in README.gentoo

*lh-sources-3.15.0 (14 Jun 2014)
*lh-sources-3.14.7 (14 Jun 2014)

  14 Jun 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.14.7.ebuild,
  +lh-sources-3.15.0.ebuild:
  Bump to latest aufs3, genpatches and linux release
