@@ -2,11 +2,15 @@ DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r5-3.15.patch1 3338 SHA256 
 DIST 0002-block-introduce-the-BFQ-v7r5-I-O-sched-for-3.15.patch1 210298 SHA256 1a3ecd9d1e19a6b21f54ad8c7b219c6894fa7c5457a127344d0fe69b62f1c4bd SHA512 b499354d0244c024ff077aec7a6e9d2d05b4523ddc63fc2a0a688fcbf38ed58ffc30924ff4ba9116530afd9f5e39cfe4f12067d31d2f45a32fdd28f24c6ae07d WHIRLPOOL 16c41e651b310cd2d0d40c38ae0342e5ca5c422b4120c815cc8298a63d3f72f93e28be4ec65bed36404175cad2b09234d8f99badd82d76895afcfaa49229ac77
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r5-for-3.15.0.patch1 40497 SHA256 3f599d798ff5a3d449c7cf9bfec5503ab598d2d8372b051d5e1bd2419fb16ee0 SHA512 cfaba4e000d89e8cb6722d06d75d26e5396cf799a3e4c6ea169de008d1f97e26449a1af0a1fd5389bea21de248c71ce653f805dd9dfcfc4c74a8f95521f1dd7f WHIRLPOOL 490d6bdd2d7ab8706ff0241be000fce1511cde3da087435b4111070f27754e3b007236b0470eb934b9daedcda69b17d798a6a0228a97b162e7c4d433a28e2b4c
 DIST README-3.15.3.BFQ 20481 SHA256 c12799344770d3834a8bff7f957e4ef432d819980d32359c04b4c87a662c855b SHA512 ca5bf1b4fbd61a9733e8d6f12f7740d34117e72aed29558368dd8922ade66651a313fefa19855d7d157d115cd14d1d7a84d4161d20f6447da48ea60140c0938b WHIRLPOOL b9db6e465c5648714a3730f5c83169908482e454fcdb597a943fdd64d823780b7c35625d023adfb478c9fb53970f9e1773cf38bd33b9fd2ba073b12e4e6ec915
+DIST README-3.15.5.BFQ 20481 SHA256 c12799344770d3834a8bff7f957e4ef432d819980d32359c04b4c87a662c855b SHA512 ca5bf1b4fbd61a9733e8d6f12f7740d34117e72aed29558368dd8922ade66651a313fefa19855d7d157d115cd14d1d7a84d4161d20f6447da48ea60140c0938b WHIRLPOOL b9db6e465c5648714a3730f5c83169908482e454fcdb597a943fdd64d823780b7c35625d023adfb478c9fb53970f9e1773cf38bd33b9fd2ba073b12e4e6ec915
 DIST aufs-sources-3.15_p20140630.tar.xz 154336 SHA256 17d941c8344b870ad24ff1a1f8a049a10ec667cc60641963914b3142b9976952 SHA512 fc7c10965d012d2585e15d7a3355342b76b9f8cd55e6d531f8e371164dae772861bc58763e04cf50ac0325c068ce14b48d3e8b53021b84ce847ace77e2492881 WHIRLPOOL bd2a50c13bb5768a43f7d9bde3800ddba8a8c206be3bf80dec8282a2c56b384ab86d9991948311b06b845d567c6b5317e3bf35ff479da6fe023463c5d0cf63a6
+DIST aufs-sources-3.15_p20140707.tar.xz 154664 SHA256 a439d75a9bd948764baf939be1325eb21af4fa8e1d0f11ce6f372771d6b7252b SHA512 f173c85e2be05014b71ccfe73566b1fd497193578fac98bf2dc270de1b29db8676a2112492cfa70ba92de9685f55da7d63e1f826c899c4c3f23ec357a1e7071f WHIRLPOOL 0f6d9d614e87834d1659f8c58918654a665751fcbcd19f64546d973d1c4449de337e5c416a455167a7e0019fd8ead5266a41e08c42971c25535f917d0aaedd28
 DIST deblob-3.15 120796 SHA256 d24f4b0548f42e7e83695919008cb75c70f5a7cb9c8a10824ca3c5c51fa62eaf SHA512 7815575001e48569268e60248da2768c6ee81982761420068ce16e6282a9552783595712ae4d937bb62d7e5f33e62b5daab0da35c8bb49c5d94ebde42f030495 WHIRLPOOL 403de2590101bc30408750a7a4eb1bdd6effbc5e2cc5c0615feff34abea649d015e02c4e54ddbb3dc33864c160f516a5e1e526162bdd0176944b382e9a52f425
 DIST deblob-check-3.15 614485 SHA256 a594a31b5c0a7bc544d2c5158a16d4565de4e45b14f3fc309cfcf91bf46491e2 SHA512 f85e0d9ebf25b37fd9ae765cb2d5767ac475abc72d8b6bb5ed775f03efb216d53cfe1d86bd2945642274cd2c3ddd6ee0ded05019bde7bac71733c96b366cabb7 WHIRLPOOL 8e8e6cdd41313f61a7f9aa4630185f06e785ad951582165d0890596a3e59f8c703a658bf75a36359750eddb9a8b3edb86656860a88dc47b722329aff4cdbb7ef
 DIST genpatches-3.15-5.base.tar.xz 78000 SHA256 1f6447d88861983278a270842ead577973f5e239516ef451c39108da4f495030 SHA512 08b846c94f339ec6a9ea8765d484a72d91b68103fe0cc70c4f50b394ce6e160cd518018ba37d14223ddd466bc86ad9dc4679fe5f45b72a559600c37d381fe3f1 WHIRLPOOL da696652f7f45a37e2c605c7550c79d61a632a38338ef0ea1c3d90f90c5672c87ac06e1bbd6ff988d784981f65285bc36550c85c2ace0d415b56f9c05dcf3d70
 DIST genpatches-3.15-5.extras.tar.xz 17668 SHA256 94dadd0f23f81742d7b56d98cd58709667489ce7655f382fa0e711c5b6742c5d SHA512 1b30c5e9302ee160c7ee7fa315e590790749d409476b40c9bb3cf79209a812ee757226ad85eaf720524653d42439b37f04e3db94701501fde80f60298a8908d4 WHIRLPOOL 29cbd917fef8608b147cf527a993b6018a1901d7346bcded8d576b6a5b336adf1506584379a72e5c9149271cec6eedef39d25e421119f0cb3008ee3fc9f2996d
+DIST genpatches-3.15-7.base.tar.xz 129444 SHA256 ac36954acce2fe6065ede5f82bf9d554469b26eff80a03ef7261cc3f2c30fa59 SHA512 eb1b8bf726ae7c019968d42e411aba203c6d17c04866a0ae4744b5df648de69b35f1d462606c6a474ad2153da9e8c6616da59e696a10c1c9b2aa5a418bc86dd0 WHIRLPOOL 83121ddfa40fc1aa59090f7b4d00b55cea06dd003e5839b821bcf9257569f6daa765e4e9b088448b5406dcc4c87e28b788bce3f23864eaef6b7620d8c222512d
+DIST genpatches-3.15-7.extras.tar.xz 17668 SHA256 3c505f00c51b593b26d613d9d02ac99664b206dc87670e1ec01d666c714ace6c SHA512 e1ec4f7a37d619ea087773d44bbab9cbfbebe4dde5dca0a718b51c7d9c00a584172fbbd05d2f1dadcf637474be034d66e96c41d28e80537dc36fac9f01f2cdbd WHIRLPOOL c978ac63c0993be52b9d48b47123b297628722be95c8b18e60931cf42e0de944fd5524eb945c3577acbc0f0eb37b98b56a3d1ba6759e4536a9a948d58ac70f49
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-8883161b98577bd2397dc8616f8e805fb1861be1.patch 15840 SHA256 8154715b3b3c7ebfb614db64afabeb192692e82c73bacdceaad0dc584a07fb8f SHA512 f0acbc5ca8115dbee77437e69ff7de45756ac3ba50bb895681630f4e4722b8cb1b034a2aded5645aac8ae88cb236f864f2d150fa4dea017ffee45ca1d70b9d8c WHIRLPOOL 40977af61d98f5d31695b6f81438ac08dbd07d51663df4d5a078564cdcc7fc9310d9ce97522c43bf0e631d10d2d8d304eb437700cf44799b7b9496675fc4a59e
 DIST linux-3.15.tar.xz 79676484 SHA256 c3927e87be4040fa8aca1b58663dc0776aaf00485604ff88a623be2f3fb07794 SHA512 d5dc477cad4584e56e2e2ef9e0950c2b22e76e5cf5090a896ba099cb7c5e5db1853a4aeb96b199189653dc66d461557e95198e37516a619f7ddc01ba6b308e02 WHIRLPOOL 7f3dfde1a23aab75b7f40770ae2ca77c1b28f845e4abe6296b2aec9b56fe94f7afa76b00eb6cc7475305c31b726ebeb4643107dd48c12ac04c933cf1856b8e77
