@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.15.5 (10 Jul 2014)
+
+  10 Jul 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.15.5.ebuild:
+  Bump to latest aufs3, genpatches and linux release
+
   02 Jul 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.14.6.ebuild,
   -lh-sources-3.14.7.ebuild, -lh-sources-3.15.0.ebuild,
   -lh-sources-3.15.1.ebuild, -lh-sources-3.15.2.ebuild,
